[package]
name = "slauth"
version = "0.6.3"
authors = ["richer <richer.arc@gmail.com>", "LucFauvel <luc.fauvel@hotmail.com>"]
edition = "2018"
description = "oath HOTP and TOTP complient implementation"
documentation = "https://docs.rs/slauth"
homepage = "https://github.com/devolutions/slauth"
repository = "https://github.com/devolutions/slauth"
readme = "README.md"
keywords = ["TOTP", "HOTP", "2FA", "MFA", "WebAuthn"]
license = "MIT"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.12", default-features = false, optional = true }

[lib]
name = "slauth"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["u2f-server", "webauthn-server", "native-bindings"]
native-bindings = []
u2f-server = ["u2f", "webpki"]
u2f = ["auth-base", "untrusted",  "serde_repr", ]
webauthn-server = [ "auth-base", "bytes", "serde_cbor"]
auth-base = ["base64", "byteorder", "ring", "serde", "serde_derive", "serde_json", "serde_bytes"]
android = ["jni"]

[dependencies]
sha2 = "0.8.0"
hmac = "0.7.0"
sha-1 = "0.8.1"
time = "0.2.22"
base32 = "0.4"
hex = "0.4"

base64 = { version = "0.10.1", optional = true }
byteorder = { version = "1.3.1", optional = true }
ring = { version = "0.16.0", optional = true }
untrusted = { version = "0.7.0", optional = true }
serde = { version = "1.0", optional = true }
serde_repr = { version = "0.1.4", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_bytes = { version = "0.11.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11.1", optional = true }
webpki = { version = "0.21.0", optional = true }
bytes = { version = "0.4.12", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.60" }
js-sys = "0.3.37"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.10"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
saphir = "0.9.4"

[dev-dependencies]
serde_json = "1.0.39"
serde_cbor = "0.11.1"
uuid = "0.7.4"
rand = "0.5"
bytes = "0.4.12"

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false